--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/supabase-adapter": "^1.8.0",
     "@aws-sdk/client-s3": "^3.806.0",
     "@aws-sdk/s3-request-presigner": "^3.806.0",
+    "@google/genai": "^1.0.0",
     "@supabase/supabase-js": "^2.49.4",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
